# lucie-py

./: .gitignore  .pre-commit-config.yaml  README.md  luciepy.py  pyproject.toml
.github/workflows/: build.yaml  publish-pypi.yml
luciepy/metadata/: resolver.py
